[workspace]
members = [
    "sub_crates/egui_custom",
    "sub_crates/hdr",
    "sub_crates/job_queue",
    "sub_crates/ocio_gen",
    "sub_crates/sensor_analysis",
    "sub_crates/shared_data",
]

# Builds a release executable, but with debug info.
[profile.release-debug]
inherits = "release"
debug = true
debug-assertions = true

[package]
name = "image_tools"
version = "0.3.0"
edition = "2018"

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "ld-linux-*.so.*",
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
    "librt.so*",
    "libresolv.so*",
    "libm.so*",
    "libGL.so*",
    "libEGL.so*",
    "libGLX.so*",
    "libGLdispatch.so*",
    "libwayland*.so.*",
    "libX11.so*",
    "libXau.so*",
    "libXcomposite.so*",
    "libXcursor.so*",
    "libXdmcp.so*",
    "libXext.so*",
    "libXfixes.so*",
    "libXinerama.so*",
    "libXi.so*",
    "libXrandr.so*",
    "libXrender.so*",
    "libxkbcommon.so*",
    "libxcb.so*",
    "libxcb-*.so.*",
]

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
eframe = "0.16"
rfd = { git = "https://github.com/PolyMeilex/rfd.git", rev = "83620471a3ce9bae", default-features = false }
image = "0.23"
rawloader = "0.37"
kamadak-exif = "0.5"
clap = "2"
rayon = "1"
pathdiff = { version = "0.2", features = [] }
colorbox = { git = "https://github.com/cessen/colorbox", branch = "master" }
# colorbox = { path = "../colorbox" }

[dependencies.egui_custom]
path = "sub_crates/egui_custom"

[dependencies.hdr]
path = "sub_crates/hdr"

[dependencies.job_queue]
path = "sub_crates/job_queue"

[dependencies.ocio_gen]
path = "sub_crates/ocio_gen"

[dependencies.sensor_analysis]
path = "sub_crates/sensor_analysis"

[dependencies.shared_data]
path = "sub_crates/shared_data"
