[package]
name = "ocio_gen"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lzma-rs = "0.2"
colorbox = { git = "https://github.com/cessen/colorbox", branch = "master" }
# colorbox = { path = "../../../colorbox" }
